--- a/style.css
+++ b/style.css
@@ -5,14 +5,7 @@ body{
     margin: 0;
     padding: 0;
 }
-nav
-{
-  background-color: rgba(255, 255, 255, 0.479);
-  position: fixed;
-  /* border: solid;
-  border-color: red; */
-  top: 0;
-}
+
 nav div a{
   color: #000;
 }
@@ -69,101 +62,19 @@ footer div a{
     
 }
 
-
-
-
-
-/* Media Quary */
-
-
-/* Section Part */
-
-/* desktop view */
-@media screen and (max-width: 1000px) {
-  div.whaledesk {
-    display:none;
-  }
-}
-
-/* laptop view */
-@media screen and (max-width: 600px), screen and (min-width: 1000px){
-  div.whalelap {
-    display:none;
-  }
-}
-
-/* mobile view */
-@media screen and (min-width: 600px) {
-  div.whalemob {
-    display:none;
-  }
+ .mega-dropdown {
+  width: 100vw;
+  max-width: 100%;
 }
 
 
-/* footer section-1 */
-@media screen and (min-width: 800px), screen and (max-width: 1024px) {
-  footer.section-1 {
-    padding-left: 0%;
-    padding-right: 0%;
-    font-size: 20px;
+  /* Footer Nested List */
+ .nested-row td {
+    padding-left: 40px;
+    background-color: #f9f9f9;
   }
-}
-
-@media screen and (max-width: 800px) {
-  footer.footer1 {
-    display:none;
-  }
-}
-
-/* footer section-2 */
-
-@media screen and (min-width: 800px) {
-  footer.section-2 {
-    display: none;
-  }
-}
 
 
 
 
 
-/* slider-section */
-
-
- :root {
-      --white-100: hsl(206, 5%, 100%);
-      --black-300: hsl(210, 20%, 6%);
-    }
-
-    body {
-      background-color: var(--white-100);
-      font-family: "Rubik", sans-serif;
-    }
-
-
-
- .section {
-      padding-block: 5rem;
-    }
-
-    .container {
-      max-width: 100%;
-      padding-inline: 1.25rem;
-      margin-inline: auto;
-    }
-
-    .swiper-slide {
-      width: 100%;
-      height: 30%;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-
-    .swiper-button-next::after,
-    .swiper-button-prev::after {
-      font-size: 1rem;
-      background: var(--black-300);
-      color: white;
-      padding: 0.75rem;
-      /* border-radius: 50%; */
-    }
